--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-body {
-    font-family: 'Noto Sans KR', sans-serif;
+@font-face {
+    font-family: 'SUITE-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
 }
 
-.c-cover {
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+body {
+    font-family: 'Noto Sans KR', sans-serif;
 }
